# simplicity-puzzle-hunt

./: .gitignore  CHANGELOG.md  CMR_EXPLAINED.md  COMANDOS.md  CONTRACT_ANALYSIS_SUMMARY.md  CONTRACT_FLOW.md  Cargo.toml  GENTZEN_SEQUENT_CALCULUS.md  JETS.md  QUICK_REFERENCE.md  README.md  SIMPLICITY_ANALYSIS.md  SUMMARY.md  VERIFY_CONTRACT.md  WHERE_IS_CMR.txt  analyze_all.sh  check-puzzle.sh  demo_cmr_unico.sh  elements-cli  list-puzzles.sh  verify.sh
