[package]
name = "puzzle-hunt"
version = "0.1.0"
edition = "2021"

[workspace]
# Este é um workspace independente

[[bin]]
name = "create-puzzle"
path = "src/bin/create_puzzle.rs"

[[bin]]
name = "solve-puzzle"
path = "src/bin/solve_puzzle.rs"

[[bin]]
name = "add-to-pot"
path = "src/bin/add_to_pot.rs"

[[bin]]
name = "export-program"
path = "src/bin/export_program.rs"

[dependencies]
simplicity = { package = "simplicity-lang", version = "0.5.0" }
simplicityhl = { path = ".." }
elements = "0.24"
elementsd = "0.4"
bitcoincore-rpc = "0.14"
secp256k1 = { package = "secp256k1-zkp", version = "0.11" }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
base64 = "0.22"
