[package]
name = "puzzle-hunt"
version = "0.1.0"
edition = "2021"

[workspace]
# Este é um workspace independente

[[bin]]
name = "create-puzzle"
path = "src/bin/create_puzzle.rs"

[[bin]]
name = "solve-puzzle"
path = "src/bin/solve_puzzle.rs"

[[bin]]
name = "add-to-pot"
path = "src/bin/add_to_pot.rs"

[[bin]]
name = "export-program"
path = "src/bin/export_program.rs"

[[bin]]
name = "list-puzzles"
path = "src/bin/list_puzzles.rs"

[[bin]]
name = "verify-puzzle"
path = "src/bin/verify_puzzle.rs"

[[bin]]
name = "check-contract"
path = "src/bin/check_contract.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
simplicity = { package = "simplicity-lang", version = "0.5.0" }
simplicityhl = { path = "../SimplicityHL" }
elements = "0.25.2"
elementsd = "0.8"
bitcoincore-rpc = "0.14"
secp256k1 = { package = "secp256k1-zkp", version = "0.11" }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
base64 = "0.22"
